@@ -271,7 +271,7 @@ setMethod("show", "BString",
         cat("  ", lo, "-letter \"", class(object), "\" instance", sep="")
         #if (!is.null(object@codec))
         #    cat(" with alphabet:", toString(object@codec@letters))
-        cat("\nSequence:", BString.get_snippet(object, 72))
+        cat("\nseq:", BString.get_snippet(object, getOption("width") - 5))
         cat("\n")
     }
 )
